# structregistry

./: .pre-commit-config.yaml  justfile  pyproject.toml
.github/workflows/: lint-and-precommit.yml
